tests/ui/attributes/export/exportable.binary.stderr
error: `#[export_stable]` attribute cannot be used on traits
  --> $DIR/exportable.rs:135:5
   |
LL |     #[export_stable]
   |     ^^^^^^^^^^^^^^^^
   |
   = help: `#[export_stable]` can be applied to associated types, data types, functions, inherent impl blocks, modules, type aliases, and use statements

error: `#[export_stable]` attribute cannot be used on constants
  --> $DIR/exportable.rs:139:5
   |
LL |     #[export_stable]
   |     ^^^^^^^^^^^^^^^^
   |
   = help: `#[export_stable]` can be applied to associated types, data types, functions, inherent impl blocks, modules, type aliases, and use statements

error: aborting due to 2 previous errors

